cluster/automation/zigbee2mqtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - zigbee-controller
      containers:
      - image: ghcr.io/koenkk/zigbee2mqtt:1.32.0@sha256:d7e6199c371474bc8dbad8e138c9233c03adf03b06a0fe47250971a75b6d51ff
        name: zigbee2mqtt
        volumeMounts:
        - mountPath: /dev/ttyUSB0
          name: zzh
        - mountPath: /app/data
          name: data
        securityContext:
          privileged: true
        ports:
        - containerPort: 8989
      volumes:
      - name: zzh
        hostPath:
          path: /dev/ttyUSB0
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-v2
