cluster/automation/zigbee2mqtt/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: zigbee2mqtt
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 8989
      targetPort: 8989
      name: http
  selector:
    app: zigbee2mqtt
