cluster/automation/zigbee2mqtt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
spec:
  rules:
    - host: zm.sko.ai
      http:
        paths:
          - backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
            path: /
            pathType: Prefix
